fix up article share, resource author spacing, change placeholder image

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,8 +18,9 @@ $global-color:                                   #666 !default;
 $global-emphasis-color:                          #333 !default;
 $global-muted-color:                             #999 !default;
 
-$global-link-color:                              $brand-primary;
-$global-link-hover-color:                        darken($brand-primary, 0.2);
+$global-link-color:                              $brand-secondary-raspberry;
+$global-link-hover-color:                        darken($brand-secondary-raspberry, 0.2);
+$link-heading-hover-color:                       $brand-secondary-raspberry; 
 
 $global-inverse-color:                           #fff !default;
 
